# minesweeper-with-friends

./: LICENSE  README.md  pyproject.toml  setup.py
doc/: RAD.md  api-diagram.puml  api-sequence-diagram.puml  minesweeper-diagram.puml  minesweeper_room-diagram.puml  model-diagram.puml
src/: main.py
src/minesweeper/: __init__.py  board.py  position.py
src/minesweeper/board/: __init__.py  board.py
src/minesweeper/cells/: __init__.py  basecell.py  cell.py  cellcontainer.py  cellwraper.py  emptycell.py  flaggedcell.py  minecell.py  revealedcell.py
src/minesweeper/game/: __init__.py  minesweeper.py  showboard.py  showcell.py
src/minesweeper_api/: __init__.py  api_app.py  endpoints.py  socketio_events.py
src/minesweeper_api/static/: script.js  style.css
src/minesweeper_api/templates/: index.html  main-menu.html
src/minesweeper_api2/: __init__.py  api_app.py  endpoints.py  socketio_events.py
src/minesweeper_api2/static/: script.js  style.css
src/minesweeper_api2/templates/: index.html  login.html  room.html
src/minesweeper_room/: GameStateUpdater.py  __init__.py  gameoptions.py  gamestateupdater.py  player.py  room.py  roomapi.py  roomregistry.py  roomstate.py
src/test/: test_api.py  test_board.py  test_cells.py  test_game.py  test_gameoptions.py  test_player.py  test_room.py  test_roomstate.py  test_showboard.py
src/test/minesweeper/: test_board.py  test_cells.py  test_game.py  test_showboard.py  test_showcell.py
src/test/minesweeper_room/: test_roomstate.py
